--- a/full-stack-contactMgmtSys/src/main/resources/templates/home.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
     <style>
         .container{
             margin: auto;
@@ -14,7 +15,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container text-2xl">
         <h1 data-th-text="${name}">Welcome to my page</h1>
         <p> Youtube Channel: <span th:text="${youtubeChannel}"></span></p>
     </div>
