--- a/full-stack-contactMgmtSys/src/main/resources/templates/about.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/about.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>About page Here</h1>
+    <h1> About page Here!!! </h1>
+    <div class="host-tag" th:insert="~fragment/base :: base"></div>
     
 </body>
 </html>
