--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/base.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/base.html
@@ -1,4 +1,4 @@
-<div class="base" th:fragment="base">
+<div th:fragment="base">
     <h1>This is site of Contact Developer</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, maiores.</p>
 </div>
