--- a/full-stack-contactMgmtSys/src/main/resources/templates/services.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/services.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>All services Here!</h1>
-    <div class="host-tag" th:insert="~fragment/base :: base"></div>
+    <div class="host-tag" th:insert="~{fragment/base :: base}"></div>
 </body>
 </html>
