--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<!-- namespace of thyemeleaf denoted by xmlns:th 
-    th-fragment id syntax for creating fragment-->
-<html lang="en" 
-    th-fragment="parent(content,title,script)" 
-    xmlns:th="http://www.thymeleaf.org">
+<!-- th:replace will use "parent" fragment from "index" file -->
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
-    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
-    <title th:replace="${title}"></title>
+    <title>About</title>
 </head>
 <body>
-    <section th:replace="${content}"></section>
-    
-    <script th:replace="${script}" src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
-    <!-- <th:block data-th-replace="{script}"></th:block> -->
+<div id="content">
+    <h1>This is home page!</h1>
+</div>
+
+<!--<footer th:fragment="footer">This is footer tag for all html</footer>-->
 </body>
 </html>
