--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/navbar/navbar.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/navbar/navbar.html
@@ -1,7 +1,5 @@
-
-
-
-<ul data-th-fragment="navbar" class="">
+<div th:fragment="navbar" xmlns:th="http://www.w3.org/1999/xhtml">
+<ul class="">
   <li>
     <a data-th-href="@{'/home'}">Home</a>
   </li>
@@ -12,3 +10,4 @@
     <a data-th-href="@{'/services'}">Services</a>
   </li>
 </ul>
+</div>
