--- a/full-stack-contactMgmtSys/src/main/resources/templates/home.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/home.html
@@ -13,6 +13,7 @@
     <title>Home</title>
 </head>
 <body>
+<div th-insert="~{navbar/navbar :: navbar}"></div>
 <section >This is home page</section>
 
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
