th:fragment redone

--- a/full-stack-contactMgmtSys/src/main/resources/templates/home.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/home.html
@@ -1,20 +1,15 @@
-
 <!DOCTYPE html>
 <!-- namespace of thyemeleaf denoted by xmlns:th 
     th-fragment id syntax for creating fragment-->
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+th:replace="~{index :: parent(~{::#content},~{::title},~{::script})}">
 <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
-    <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
-<!--    <title th:fragment="title"></title>-->
     <title>Home</title>
 </head>
 <body>
-<div th-insert="~{navbar/navbar :: navbar}"></div>
-<section >This is home page</section>
+<div></div>
+<section id="content">This is home page</section>
 
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 <!-- <th:block data-th-replace="{script}"></th:block> -->
