--- a/full-stack-contactMgmtSys/src/main/resources/templates/about.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!-- th:replace will use "parent" fragment from "index" file -->
-<html lang="en" th-insert="~{home :: parent(~{::#content},~{::title},~{::script})}">
+<html lang="en" th-replace="~{index :: parent(~{},~{::title},~{::script})}">
 <head>
     <title>About</title>
 </head>
 <body>
-    <div id="content">
+    <div>
         <h1>This is about page!</h1>
     </div>
 <script>
