--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <section data-th-replace="${content}"></section>
+<div th:replace="fragment/navbar/navbar::navbar"></div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
