--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
 </head>
 <body>
+<nav data-th-replace="fragment/navbar/navbar::navbar"></nav>
 <section data-th-replace="${content}"></section>
-<div th:replace="fragment/navbar/navbar::navbar"></div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
