--- a/full-stack-contactMgmtSys/src/main/resources/templates/services.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/services.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" th-insert="~{index :: parent(~{::#content},~{::title},~{::script})}">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      th:insert="~{index :: parent(~{::#content},~{::title},~{::script})}">
 <head>
     <title>Services</title>
 </head>
