--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/navbar/navbar.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/navbar/navbar.html
@@ -1,6 +1,7 @@
 <!--navbar will used as fragment for every-page-->
 
 <nav th:fragment="navbar" xmlns:th="http://www.w3.org/1999/xhtml" class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
+
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img th:src="@{'/images/contact_icon.png'}" class="h-8" alt="Contact-MS"/>
@@ -13,9 +14,13 @@
               type="button"
               class="text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Log in</a>
       <a
-              data-th-href="@{'/reg'}"
+              data-th-href="@{'/register'}"
               type="button"
               class="text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign up</a>
+
+      <!-- to change theme {white OR dark} -->
+      <div data-th-replace="fragment/buttons/theme::theme"></div>
+
       <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
