--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en"
+<html
+        lang="en"
       th:fragment="parent(content,title,script)"
       xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -7,8 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--    Title here-->
     <title data-th-replace="${title}">Contact-MS</title>
+<!--    flowbite-->
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
+<!--    fontawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
 <nav data-th-replace="fragment/navbar/navbar::navbar"></nav>
@@ -16,6 +21,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+<script data-th-src="@{'/js/eventTheme/themeChange.js'}"></script>
 <th:block data-th-replace="${script}"></th:block>
 </body>
 </html>
