--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html
+        class="light"
         lang="en"
-      th:fragment="parent(content,title,script)"
-      xmlns:th="http://www.thymeleaf.org">
+        th:fragment="parent(content,title,script)"
+        xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
