Changing-Theme-Text

--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html
-        class="light"
+        class="Light"
         lang="en"
         th:fragment="parent(content,title,script)"
         xmlns:th="http://www.thymeleaf.org">
