--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/buttons/theme.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/buttons/theme.html
@@ -3,5 +3,5 @@
             id="change_theme"
             type="button"
             class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-        <i class="fa-solid fa-circle-half-stroke"></i><span>Light</span></button>
+        <i class="fa-solid fa-circle-half-stroke"></i><span class="p-1">Light</span></button>
 </div>
