--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/navbar/navbar.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/navbar/navbar.html
@@ -19,7 +19,7 @@
               class="text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign up</a>
 
       <!-- to change theme {white OR dark} -->
-      <div id="change_theme" data-th-replace="fragment/buttons/theme::theme"></div>
+      <div data-th-replace="fragment/buttons/theme::theme"></div>
 
       <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
@@ -27,6 +27,8 @@
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
       </button>
+
+
     </div>
 
 <!--    menu lies here -->
