--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html
-        class="Light"
         lang="en"
+        class="dark"
         th:fragment="parent(content,title,script)"
         xmlns:th="http://www.thymeleaf.org">
 <head>
