attempt-1:registration/login

--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -16,10 +16,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
-<body>
-<nav data-th-replace="fragment/navbar/navbar::navbar"></nav>
-<section data-th-replace="${content}"></section>
+<body class="dark:bg-gray-800 dark:text-white">
+    <!-- This is for navbar -->
+<div data-th-replace="fragment/navbar/navbar::navbar"></div>
 
+<!-- This is for other boby component -->
+<div class="p-6">
+    <section data-th-replace="${content}"></section>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 <script data-th-src="@{'/js/eventTheme/themeChange.js'}"></script>
