--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
@@ -8,23 +8,98 @@
 </head>
 <body>
 <div id="content">
-    <div class="grid grid-cols-12">
-        <div class="col-span-4 md:col-span-2 xl:col-span-4 lg:col-span-3" ></div>
+    <!--  -->
+    <div class="flex justify-center">
+        <!-- <div class="grid grid-cols-12"> -->
+        <div class="col-span-6 md:col-span-2 xl:col-span-4 lg:col-span-3" > </div>
         <div class="col-span-12 md:col-span-8 xl:col-span-4 lg:col-span-6">
+            <!-- <h1>Here is registration form</h1> -->
 
-            <!--Card-->
-            <a href="#" 
-            class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+            <!-- Card--> 
+                <div
+                class="block p-6 border-t-[10px] border-blue-700 bg-white rounded-xl shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-blue-700 dark:hover:bg-gray-700">
 
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology acquisitions 2021</h5>
-                <p class="font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
-            </a>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Sign Up Here!!!</h5>
+                    <p class="font-normal text-gray-700 dark:text-gray-400">You can manage contact here with your ease.
+                    </p>
 
+                    <!-- Area to enter data -->
+                     <form action="" class="mt-5">
+                        
+                        <!-- Name Field -->
+                        <div class="mb-3">
+                            <label 
+                            for="name" 
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
+                            <input 
+                            type="text" 
+                            id="name" 
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="Enter Username" required />
+                        </div>
+
+                        <!-- Email Field -->
+                        <div class="mb-3">
+                            <label 
+                            for="email" 
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
+                            <input 
+                            type="email" 
+                            id="email" 
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="name@email.com" required />
+                        </div>
+
+                        <!-- Password Field -->
+                        <div class="mb-5">
+                            <label 
+                            for="Password" 
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
+                            <input 
+                            type="password" 
+                            id="password" 
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="***********" required />
+                        </div>
+
+                        <!-- PhoneNumber Field -->
+                        <div class="mb-5">
+                            <label 
+                            for="phone" 
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact Number</label>
+                            <input 
+                            type="text" 
+                            id="phone" 
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
+                        </div>
+
+                        <!-- About Text Field -->
+                        <div class="mb-3">
+                            <label 
+                            for="about" 
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Write about yourself</label>
+                            <textarea id="about"
+                            rows="6" 
+                            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write Here..."></textarea>
+
+                        </div>
+
+                        <!-- Button Section -->
+                         <div class="mb-3 flex justify-center gap-2">
+                            <!-- Sign Up button -->
+                            <!-- data-th-href="#" -->
+                            <a  type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign up</a>
+
+                            <!-- Reset button -->
+                            <a  type="button" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</a>
+
+                         </div>
+                     </form>
+
+
+                </div>
         </div>
     </div>
 </div>
 <script>
-    console.log("About page")
+    console.log("Registration page")
 </script>
 </body>
 </html>
