--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -20,12 +20,12 @@
     referrerpolicy="no-referrer" />
 
 </head>
-<body class="dark:bg-gray-800 dark:text-white">
+<body class="dark:bg-gray-800 bg-green-100 dark:text-white">
     <!-- This is for navbar -->
 <navbar data-th-insert="fragment/navbar/navbar::navbar"></navbar>
 
 <!-- This is for other boby component -->
-<div class="p-6">
+<div class="p-5">
     <section data-th-replace="${content}"></section>
 </div>
 
