--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
@@ -28,7 +28,14 @@
                     1). This action properties facilitates us that where to send/where it get submitted the url or data
                     2). This method properties means these data won't go to the url but to the request-body
                          -->
-                     <form data-th-action="@{'/do-register'}" method="post" class="mt-5">
+                     <form 
+                     data-th-action="@{'/do-register'}" 
+                     method="post" 
+                     data-th-object="${userForm}"
+                     class="mt-5">
+
+                     <!-- 1). data-th-object: now we can use the properties of userForm object directly in the field below
+                        2). data-th-field: to use the specific entity this comes form the data-th-object-->
                         
                         <!-- Name Field -->
                         <div class="mb-3">
@@ -38,6 +45,7 @@
                             <input 
                             type="text" 
                             id="name" 
+                            data-th-field="*{name}"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="Enter Username" required />
                         </div>
 
@@ -49,6 +57,7 @@
                             <input 
                             type="email" 
                             id="email" 
+                            data-th-field="*{email}"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="name@email.com" required />
                         </div>
 
@@ -60,6 +69,7 @@
                             <input 
                             type="password" 
                             id="password" 
+                            data-th-field="*{password}"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="***********" required />
                         </div>
 
@@ -71,6 +81,7 @@
                             <input 
                             type="text" 
                             id="phone" 
+                            data-th-field="*{PhoneNumber}"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
                         </div>
 
@@ -81,6 +92,7 @@
                             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Write about yourself</label>
                             <textarea id="about"
                             rows="6" 
+                            data-th-field="*{about}"
                             class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Write Here..."></textarea>
 
                         </div>
@@ -89,10 +101,15 @@
                          <div class="mb-3 flex justify-center gap-2">
                             <!-- Sign Up button -->
                             <!-- data-th-href="#" -->
-                            <a  type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign up</a>
+                            <button  
+                            type="submit" 
+                            
+                            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign up</button>
 
                             <!-- Reset button -->
-                            <a  type="button" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</a>
+                            <button  
+                            type="reset" 
+                            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</button>
 
                          </div>
                      </form>
