--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
@@ -15,6 +15,8 @@
         <div class="col-span-12 md:col-span-8 xl:col-span-4 lg:col-span-6">
             <!-- <h1>Here is registration form</h1> -->
 
+<!--            Alert Message-->
+            <div data-th-replace="fragment/message/alertMessage::alerMessage"></div>
             <!-- Card--> 
                 <div
                 class="block p-6 border-t-[10px] border-blue-800 bg-white rounded-xl shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-blue-700 dark:hover:bg-gray-700">
