--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/message/alertMessage.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/message/alertMessage.html
@@ -1,5 +1,8 @@
 <div
+        data-th-if="${session.message}"
         data-th-fragment="alerMessage"
-        class="p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400" role="alert">
-    <span class="font-medium">Success alert!</span> Change a few things up and try submitting again.
+        class="p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+        role="alert">
+<!--    <span class="font-medium">Success alert!</span>-->
+    <span data-th-text="${session.message}"></span>
 </div>
