--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/message/alertMessage.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/message/alertMessage.html
@@ -1,8 +1,16 @@
+
+<!-- data-th-classappend="'text-'+type+'-800 rounded-lg bg-'+type+'-50 dark:bg-gray-800 dark:text-'+type+'-400'" this classappend will change the alert message notification dinamically we used concatination technique
+
+-->
+
+
 <div
         data-th-if="${session.message}"
+        data-th-object="${session.message}"
         data-th-fragment="alerMessage"
-        class="p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400"
+        data-th-classappend="'text-'+type+'-800 rounded-lg bg-'+type+'-50 dark:bg-gray-800 dark:text-'+type+'-400'"
+        class="p-4 mb-4 text-sm "
         role="alert">
 <!--    <span class="font-medium">Success alert!</span>-->
-    <span data-th-text="${session.message}"></span>
+    <span data-th-text="*{content}"></span>
 </div>
