--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
@@ -34,7 +34,9 @@
                      data-th-action="@{'/do-register'}" 
                      method="post" 
                      data-th-object="${userForm}"
-                     class="mt-5">
+                     class="mt-5"
+                     novalidate>
+
 
                      <!-- 1). data-th-object: now we can use the properties of userForm object directly in the field below
                         2). data-th-field: to use the specific entity this comes form the data-th-object-->
@@ -49,6 +51,10 @@
                             id="name" 
                             data-th-field="*{name}"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="Enter Username" required />
+                         <p
+                                 data-th-if="${#fields.hasErrors('name')}"
+                                 data-th-errors="*{name}"
+                                 class="text-red-600 px-1 py-2"> Name is required</p>
                         </div>
 
                         <!-- Email Field -->
@@ -109,9 +115,9 @@
                             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign up</button>
 
                             <!-- Reset button -->
-                            <button  
-                            type="reset" 
-                            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</button>
+<!--                            <button  -->
+<!--                            type="reset" -->
+<!--                            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Reset</button>-->
 
                          </div>
                      </form>
