--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
@@ -16,7 +16,7 @@
             <!-- <h1>Here is registration form</h1> -->
 
 <!--            Alert Message-->
-            <div data-th-replace="fragment/message/alertMessage::alerMessage"></div>
+            <div data-th-replace="fragment/message/alertMessage::alertMessage"></div>
             <!-- Card--> 
                 <div
                 class="block p-6 border-t-[10px] border-blue-800 bg-white rounded-xl shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-blue-700 dark:hover:bg-gray-700">
@@ -100,8 +100,8 @@
                             data-th-field="*{PhoneNumber}"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
                             <p
-                                    data-th-if="${#fields.hasErrors('phone')}"
-                                    data-th-errors="*{phone}"
+                                    data-th-if="${#fields.hasErrors('phoneNumber')}"
+                                    data-th-errors="*{phoneNumber}"
                                     class="text-red-600 px-1 py-2"></p>
                         </div>
 
