--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/message/alertMessage.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/message/alertMessage.html
@@ -7,7 +7,7 @@
 <div
         data-th-if="${session.message}"
         data-th-object="${session.message}"
-        data-th-fragment="alerMessage"
+        data-th-fragment="alertMessage"
         data-th-classappend="'text-'+type+'-800 rounded-lg bg-'+type+'-50 dark:bg-gray-800 dark:text-'+type+'-400'"
         class="p-4 mb-4 text-sm "
         role="alert">
