--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/register.html
@@ -97,7 +97,7 @@
                             <input 
                             type="text" 
                             id="phone" 
-                            data-th-field="*{PhoneNumber}"
+                            data-th-field="*{phoneNumber}"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" required />
                             <p
                                     data-th-if="${#fields.hasErrors('phoneNumber')}"
@@ -126,8 +126,7 @@
                             <!-- Sign Up button -->
                             <!-- data-th-href="#" -->
                             <button  
-                            type="submit" 
-                            
+                            type="submit"
                             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Sign up</button>
 
                             <!-- Reset button -->
