--- a/full-stack-contactMgmtSys/src/main/resources/templates/user/profile.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/user/profile.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Profile</title>
 </head>
 <body>
-    <h1>This is Dashboard.</h1>
+    <h1>This is user profile</h1>
 </body>
 </html>
