--- a/full-stack-contactMgmtSys/src/main/resources/templates/index.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
     <!-- path for tailwindcss -->
     <link rel="stylesheet" data-th-href="@{'static/css/output.css'}" />
+    <link rel="stylesheet" data-th-href="@{'static/css/style.css'}" />
 <!--    fontawesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" 
     integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" 
