login with facebook

--- a/full-stack-contactMgmtSys/src/main/resources/templates/home.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
       xmlns:th="http://www.thymeleaf.org"
       th:replace="~{index :: parent(~{::#content},~{::title},~{::script})}">
 <head>
-    <title>Home</title>
+    <title>Contact Smartly</title>
 </head>
 <body>
 <nav></nav>
