--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/login.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/login.html
@@ -94,10 +94,16 @@
                 </form>
 
 <!-- Click and login using google or any other social media applications                -->
-                <div class="social-button-container flex justify-center gap-2">
+
+
+                <div class="social-button-container flex justify-center gap-2 flex-direction: column">
                     <a
                             class="login-with-google-btn"
                             data-th-href="@{'/oauth2/authorization/google'}">Google</a>
+
+                    <a
+                            class="login-with-google-btn"
+                            data-th-href="@{'/oauth2/authorization/facebook'}">Facebook</a>
                 </div>
 
             </div>
