--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/navbar/navbar.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/navbar/navbar.html
@@ -5,7 +5,7 @@
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img th:src="@{'/images/contact_icon.png'}" class="h-8" alt="Contact-MS"/>
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Contact-MS</span>
+      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Contact Smartly</span>
     </a>
     <!--    Login ++ Sign up buttons Here!!!-->
     <div class="flex gap-2 md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
