--- a/full-stack-contactMgmtSys/src/main/resources/templates/user/profile.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/user/profile.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>This is user profile</h1>
+
+    <h2 data-th-text="${loggedInUser.name}""></h2>
+    <h2 data-th-text="${loggedInUser.email}""></h2>
 </body>
 </html>
